k8s-istio/manifests/keycloak/services-destination-rule.yml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: services-dr
  namespace: keycloak
spec:
  host: '*'
  # host: "servicea.sedona.fr"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
